2003-06-16  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fun.c (bk_fun_exit): Allow for stats tracking of functions
	which take longer than 2^32 microseconds to complete.

2003-06-12  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_close): Race condition.

	* lib/b_thread.c (struct bk_threadcomm): Try to preserve
	ITIMER_PROF so that profiling will work across threads (into one
	pool--not per-thread).

	* lib/b_stats.pl: Sort stats HTML output.  Not in a more
	convenient place because it is assumed that this is for developers
	only.

	* lib/b_stats.c (bk_stat_dump): Prevent profiling while you are
	dumping profiling (nasty locking problems).

2003-06-12  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_strhash): make nomodulus the default [we never use
	modulus anywhere]
	(bk_bufhash): make nomodulus the default; special case numeric vals

2003-06-10  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_monitor_memory_thread): gdb can't implement
	watchpoints in a threaded program, so do the next best thing
	and monitor the fucker yourself.

	* lib/b_getbyfoo.c (copy_hostent): Off-by-one--not copying
	trailing NULL hostentlist termination.  And insight didn't
	discover this why?

2003-06-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_close): Lock before searching fd association
	list.

	* lib/b_ioh.c (CALL_BACK): Make incallback a counter instead of a
	flag--may be recursive.

2003-06-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Memory leak on writes

	* lib/b_config.c (load_config_from_file): Memory leak during comments

2003-06-03  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_getbyfoo.c (bk_gethostbyfoo): Memory leak due to reentrant
	gethostbyname_r functions.

	* lib/b_pollio.c (bk_polling_io_write): Timeout processing
	confused--stale event queue jobs possible